Fixed Search Button Spacing

--- a/The Lombardi Project.css
+++ b/The Lombardi Project.css
@@ -678,3 +678,7 @@ h2 {
   
   .show {display: block;}
   /* Dropdown CSS*/
+
+  .searchsavestate {
+	  margin-right: 2rem;
+  }
